2007-02-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gsch2pcb.c: Applied patch by Jeff Mallatt to fix a typo 
	in some helpful output for pcb's Disperse all elements. Thanks.

2007-02-08 19:24  Dan McMahill <danmc>

	* configure.ac, examples/gsch2pcb/Makefile.am,
	  examples/gsch2pcb/first.sch, examples/gsch2pcb/project.sample,
	  examples/gsch2pcb/second.sch, examples/gsch2pcb/third.sch,
	  src/gsch2pcb.c: 1)  add a new option to gsch2pcb "use-m4" for the
	  project file or "--use-m4" for the command line.  By default now,
	  gsch2pcb will not try to run m4 at all.  If you want the old
	  behaviour of running m4, you'll have to use this option.  It
	  seems that this is what most users want (no m4 involved at run
	  time).

	  2) rather than hard coding a number of paths like /usr/X11R6/lib
	  and /usr/local/share into the code for places to look for PCB
	  footprints, use a single default directory which is based on
	  ${datadir}.  If the user wants to, they can override that with
	  --with-pcb-datadir=/opt/pcb-20070204/share for example.

	  3)  when searching for newlib footprints with, for example, a
	  name like footprint=MY1206, match either "MY1206" or "MY1206.fp"
	  so we can start having extensions on footprint files without
	  needing to explicitly add the ".fp" part in the footprint=
	  attribute.  All of the footprints in the pcb distribution which
	  came from the m4 libraries have .fp extensions now.

	  4)  add some example schematic files in the gsch2pcb example
	  directory

2007-01-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* gschlas/Makefile.am, gschlas/globals.c, gschlas/gschlas.c,
	gschlas/parsecmd.c, gschlas/s_util.c, include/globals.h,
	include/prototype.h: Added embed/unembed command line switched to
	gschlas to support embedding/unembedding all components/pictures
	in the specified schematics on the command line.

2006-11-21 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Fixed libgeda detection/find error message when